fix(gutenberg): only alignleft/alignnright on larger screens

--- a/web/themes/custom/julkaisut/assets/styles/gutenberg/blocks/image.scss
+++ b/web/themes/custom/julkaisut/assets/styles/gutenberg/blocks/image.scss
@@ -1,3 +1,11 @@
+@use "common/breakpoints" as *;
+
 .wp-block-image {
-  //
+  @include mq($until: small) {
+    .alignleft,
+    .alignright {
+      float: none;
+      margin: 0;
+    }
+  }
 }
